ingresses/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lg-oled-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - lg-oled.paybycrypto.ch
      secretName: lg-oled-los 
  rules:
    - host: lg-oled.paybycrypto.ch
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lg-oled-service
                port:
                  number: 80
  ingressClassName: nginx
